@@ -46,6 +46,7 @@ Bugfixes:
  - Qt: Ensure CLI backend is attached when submitting commands (fixes mgba.io/i/662)
  - Core: Fix crash with rewind if savestates shrink
  - Test: Fix crash when loading invalid file
+ - GBA Hardware: Fix crash if a savestate lies about game hardware
 Misc:
  - SDL: Remove scancode key input
  - GBA Video: Clean up unused timers
